# no-stl-binary-parser

./: CMakeLists.txt  README.md
src/: main.cpp
